# solana-accountsdb-sqs

./: .gitignore  Cargo.toml  README.md  build.rs  config.json  rust-toolchain.toml
.github/workflows/: release.yml  test.yml
ci/: cargo-install-all.sh  create-tarball.sh  env.sh  rust-version.sh
src/: admin.rs  aws.rs  config.rs  filter.rs  filters.rs  lib.rs  metrics.rs  plugin.rs  prom.rs  serum.rs  sqs.rs  version.rs
