[package]
name = "solana-geyser-sqs"
version = "0.1.1"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.44"
arrayref = "0.3.6"
async-trait = "0.1"
base64 = "0.13.0"
bincode = "1.3"
clap = { version = "3.1.8", features = ["cargo", "derive"] }
derivative = "2"
enumflags2 = "0.6.4"
flate2 = "1"
futures = "0.3"
hex = "0.4"
humantime = "2.1.0"
hyper = { version = "0.14", features = ["server"] }
hyper-tls = "0.5"
lazy_static = "1"
log = "0.4.14"
md-5 = "0.10"
pin-project = "1"
prometheus = "0.13"
rand = "0.7.3"
redis = { version = "0.21.4", features = ["tokio-comp", "tokio-native-tls-comp"] }
rusoto_core = "0.48"
rusoto_credential = "0.48"
rusoto_s3 = "0.48"
rusoto_sqs = "0.48"
safe-transmute = "0.11"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
serum_dex = "0.5.4"
solana-geyser-plugin-interface = "=1.13.3"
solana-logger = "=1.13.3"
solana-sdk = "=1.13.3"
solana-transaction-status = "=1.13.3"
spl-token = "3.3.1"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "time", "macros", "io-util"] }
zstd = "0.11.1"

[build-dependencies]
anyhow = "1"
cargo-lock = "8"
git-version = "0.3"
vergen = "7.2.1"

[profile.release]
codegen-units = 1
lto = true
