[package]
name = "solana-geyser-sqs"
version = "0.3.2"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agave-geyser-plugin-interface = "~2.1.11"
anyhow = "1.0.44"
arrayref = "0.3.6"
async-trait = "0.1.73"
base64 = "0.22.0"
bincode = "1.3.0"
chrono = "0.4.31"
clap = { version = "4.3.0", features = ["cargo", "derive"] }
derivative = "2.2.0"
enumflags2 = "0.6.4"
flate2 = "1.0.27"
futures = "0.3.28"
hex = "0.4.3"
http = "1.1.0"
http-body-util = "0.1.2"
humantime = "2.1.0"
hyper0 = { package = "hyper", version = "0.14.27" }
hyper = "1.4.1"
hyper-util = { version = "0.1.7", features = ["server-auto", "tokio"] }
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
log = "0.4.14"
md-5 = "0.10.6"
pin-project = "1.1.3"
prometheus = "0.13.3"
rand = "0.8.5"
redis = { version = "0.21.4", features = ["tokio-comp", "tokio-native-tls-comp"] }
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_sqs = "0.48.0"
safe-transmute = "0.11.2"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
serum_dex = "0.5.4"
solana-logger = "~2.1.11"
solana-sdk = "~2.1.11"
solana-transaction-status = "~2.1.11"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
thiserror = "1.0.30"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "time", "macros", "io-util"] }
zstd = "0.12.4"

[build-dependencies]
anyhow = "1.0.62"
cargo-lock = "9.0.0"
git-version = "0.3.5"
vergen = { version = "9.0.1", features = ["build", "rustc"] }

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
